--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:image:width" content="500">
     <meta property="og:image:height" content="500">
     <meta property="og:image:alt" content="xalphabet.dev profile picture">
+    <script src="https://kit.fontawesome.com/917baff1ec.js" crossorigin="anonymous"></script>
     
     <link rel="icon" type="image/jpeg" href="images/hi.jpg">
     
