--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <audio class="playlist-song" preload="auto" data-title="No One Noticed (Extended English)" data-artist="The Marías">
             <source src="media/noone2.mp3" type="audio/mpeg">
         </audio>
-        <audio class="playlist-song" preload="auto" data-title="Trust Issues" data-artist="Drake">
-            <source src="media/trustissues.mp3" type="audio/mpeg">
+        <audio class="playlist-song" preload="auto" data-title="Trust Issues" data-artist="The Weeknd">
+            <source src="media/untrust.mp3" type="audio/mpeg">
         </audio>
         <audio class="playlist-song" preload="auto" data-title="Let You Break My Heart Again" data-artist="Laufey/Philharmonia Orchestra">
             <source src="media/unheart.mp3" type="audio/mpeg">
