--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="xalphabet.dev">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#D1EBF6">
     <meta property="og:title" content="xalphabet.dev">
-    <meta property="og:description" content="ehm">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/hi.jpg">
     <meta property="og:image:width" content="500">
