--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="xalphabet.dev">
     <meta name="theme-color" content="#D1EBF6">
     <meta property="og:title" content="xalphabet.dev">
+    <meta name="twitter:card" content="images/_.gif">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/hi.jpg">
