--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:card" content="images/_.gif">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/hi.jpg">
+    <meta property="og:image" content="images/_.gif">
     <meta property="og:image:width" content="500">
     <meta property="og:image:height" content="500">
     <meta property="og:image:alt" content="xalphabet.dev profile picture">
